--- a/Fedora_23_PVHVM.cfg
+++ b/Fedora_23_PVHVM.cfg
@@ -1,26 +1,21 @@
-# some bits borrowed verbatim from here
-# https://git.fedorahosted.org/cgit/cloud-kickstarts.git/tree/generic
-# thanks Fedora!
+## ksline: net.ifnames=0 ks=http://<kick_host>/ks.cfg
 
 # Install, not upgrade
 install
 cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/23/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/23/Everything/x86_64/os/
-#
-#url --url=http://mirror.rackspace.com/fedora/releases/23/Server/x86_64/os/
-#repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/23/Everything/x86_64/os/
+url --url=http://mirror.rackspace.com/fedora/releases/23/Server/x86_64/os/
+repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/23/Everything/x86_64/os/
 
 
 # Language and keyboard setup
 lang en_US.UTF-8
-keyboard us
+keyboard --vckeymap=us
 
 # Configure DHCP networking w/optional IPv6, firewall on
 network --onboot yes --device eth0 --bootproto dhcp --ipv6 auto --hostname localhost
-firewall --service=ssh
+firewall --enabled --service=ssh
 
 # Set timezone
 timezone --utc Etc/UTC
@@ -33,44 +28,35 @@ authconfig --enableshadow --passalgo=sha512
 selinux --permissive
 
 # Services running at boot
-services --enabled network,sshd
-services --disabled sendmail
+services --enabled network,sshd,cloud-init-local,cloud-init,cloud-config,cloud-final
 
 # Disable anything graphical
 skipx
-#text
 
 # Setup the disk
+clearpart --all
 zerombr
-clearpart --all --initlabel
-part / --fstype=ext4 --grow --size=1024 --asprimary
-#bootloader --timeout=1 --append="console=ttyS0,115200n8 console=hvc0 console=tty0" --extlinux
-# extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
-# using the extlinux option from anaconda with that custom in %post breaks booting
-bootloader --disabled
+part / --fstype=ext4 --grow --size=1024 --asprimary --label=/
+bootloader --timeout=1 --append="root=/dev/xvda1 net.ifnames=0"
 
 # Shutdown when the kickstart is done
 shutdown --eject
 
-# Minimal package set
-%packages --excludedocs
-@core
-kernel
-grubby
+## no need to run firstboot
+firstboot --disable
+
+# Minimal package set (Core and Base groups are included by default)
+%packages
+@^minimal-environment
+chrony
+man-pages
 cloud-init
 cloud-utils
+
 
 # We need this image to be portable; also, rescue mode isn't useful here.
 dracut-config-generic
 -dracut-config-rescue
-
-# Not needed with pv-grub (as in EC2), and pulled in automatically
-# by anaconda, but appliance-creator needs the hint
-syslinux-extlinux 
-
-# Needed initially, but removed below.
-# update: not removed below 
-firewalld
 
 # extras
 rsync
@@ -78,46 +64,28 @@ tar
 wget
 curl
 which
+nmap-ncat
+nc6
 
 # Some things from @core we can do without in a minimal install
 -biosdevname
 -plymouth
--NetworkManager
 -iprutils
-
-# really, no thanks grub2
--grub2-tools
--grub2
 
 %end
 
 %post --erroronfail
 
-# set bootable
-parted -s /dev/xvda set 1 boot on
-
-# setup systemd to boot to the right runlevel
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-
 # If you want to remove rsyslog and just use journald, remove this!
 rmdir /var/log/journal/ 
 
-# this is installed by default but we don't need it in virt
-yum -C -y remove linux-firmware
-
-# initscripts don't like this file to be missing.
+# let's get rid of zeroconf
 cat > /etc/sysconfig/network << EOF
 NETWORKING=yes
 NOZEROCONF=yes
 EOF
 
-# For cloud images, 'eth0' _is_ the predictable device name, since
-# we don't want to be tied to specific virtual (!) hardware
-rm -f /etc/udev/rules.d/70*
-ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
-
-# simple eth0 config, again not hard-coded to the build hardware
+# simple eth0 config, not hard-coded to the build hardware
 cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
 DEVICE="eth0"
 BOOTPROTO="static"
@@ -125,17 +93,15 @@ ONBOOT="yes"
 TYPE="Ethernet"
 EOF
 
-# generic localhost names
-cat > /etc/hosts << EOF
-127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
-::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
-EOF
-
 # Because memory is scarce resource in most cloud/virt environments,
 # and because this impedes forensics, we are differing from the Fedora
 # default of having /tmp on tmpfs.
 echo "Disabling tmpfs for /tmp."
 systemctl mask tmp.mount
+
+# networking is handled by nova-agent
+systemctl mask NetworkManager
+systemctl mask NetworkManager-wait-online
 
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
@@ -147,24 +113,45 @@ ssh_deletekeys: False
 resize_rootfs: noblock
 EOF
 
-# tmp tmp
-mkdir /tmp/tmp
-cd /tmp/tmp
+#
+# install xen tools and nova agent
+#
+mkdir /tmp/tools-install
+cd /tmp/tools-install
 
 # install xen tools
 wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.2.0-1120.x86_64.rpm
 wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
-# install agent
-#wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-#rpm -Uhv nova-agent*
-wget --no-check-certificate http://KICK_HOST/nova-agent/nova-agent-Linux-x86_64-1.39.1.tar.gz
-tar xzvf nova-agent*.tar.gz
-sh installer.sh
-chkconfig nova-agent on
+# install nova-agent
+##wget http://KICK_HOST/nova-agent-0.2.1-1.fc23.noarch.rpm -O nova-agent.rpm
+##rpm -Uvh nova-agent.rpm
+wget http://KICK_HOST/nova-agent/nova-agent-1.39.1-1.fc23.tar.gz -O nova-agent.tgz
+tar xfzC nova-agent.tgz /
 
-# set some stuff
+# a systemd service file for nova-agent
+cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
+[Unit]
+Description=nova-agent service
+After=xe-linux-distribution.service
+[Service]
+EnvironmentFile=/etc/nova-agent.env
+ExecStart=/usr/sbin/nova-agent -n -l info /usr/share/nova-agent/nova-agent.py
+[Install]
+WantedBy=multi-user.target
+EOF
+
+cat > /etc/nova-agent.env <<'EOF'
+LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/share/nova-agent/1.39.1/lib"
+PYTHONPATH="${PYTHONPATH}:/usr/share/nova-agent/1.39.1/lib/python2.7/site-packages:/usr/share/nova-agent/1.39.1/lib/python2.7/"
+EOF
+
+systemctl daemon-reload
+systemctl enable nova-agent
+
+
+# modify sysctl parameters for cloud
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
@@ -178,122 +165,50 @@ net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_sack = 1
 EOF
 
-# our fstab is fonky
+# make fstab sane
 cat > /etc/fstab <<'EOF'
-/dev/xvda1 / ext4 errors=remount-ro,noatime,barrier=0 0 1
-#/dev/xvdc1 none swap sw 0 0
+/dev/xvda1 / ext4 defaults,errors=remount-ro,noatime,barrier=0 0 1
 EOF
 
 # set rackspace mirrors
-#sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora.repo
-#sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora-updates.repo
-#sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora-updates-testing.repo
-#sed -i '%/linux%d' /etc/yum.repos.d/fedora.repo
-#sed -i '%/linux%d' /etc/yum.repos.d/fedora-updates.repo
-#sed -i '%/linux%d' /etc/yum.repos.d/fedora-updates-testing.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/fedora.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/fedora-updates.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/fedora-updates-testing.repo
-#sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora.repo
-#sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates.repo
-#sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates-testing.repo
+sed -i '/^#baseurl=/c\baseurl=http://mirror.rackspace.com/fedora/releases/$releasever/Server/$basearch/os/' /etc/yum.repos.d/*.repo
+sed -i '/metalink/s/^/#/' /etc/yum.repos.d/*.repo
 
 # update all
-yum -y update
-yum -y upgrade
+dnf -y update
 
 # cloud-init fixes for nova-agent race condition
-cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
-[Unit]
-Description=Initial cloud-init job (pre-networking)
-Wants=local-fs.target
-After=local-fs.target
+###cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
+###[Unit]
+###Description=Initial cloud-init job (pre-networking)
+###Wants=local-fs.target
+###After=local-fs.target
 
-[Service]
-Type=oneshot
-ExecStartPre=/usr/bin/sleep 20
-ExecStart=/usr/bin/cloud-init init --local
-RemainAfterExit=yes
-TimeoutSec=0
-
-# Output needs to appear in instance console output
-StandardOutput=journal+console
-
-[Install]
-WantedBy=multi-user.target
-EOF
-
-systemctl enable cloud-init-local
-systemctl enable cloud-init
-systemctl enable cloud-config
-systemctl enable cloud-final
-
-# some systemd workarounds
-sed -i 's/XenServer Virtual Machine Tools/xe-linux-distribution/g' /etc/init.d/xe-linux-distribution
-update-rc.d xe-linux-distribution defaults
-
-# intention is to move this bit into nova-agent instead
-cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
-[Unit]
-Description=nova-agent
-Wants=local-fs.target
-After=local-fs.target xe-linux-distribution.service
-
-[Service]
-Type=oneshot
-ExecStart=/etc/init.d/nova-agent start
-RemainAfterExit=yes
-TimeoutSec=0
+###[Service]
+###Type=oneshot
+###ExecStartPre=/usr/bin/sleep 20
+###ExecStart=/usr/bin/cloud-init init --local
+###RemainAfterExit=yes
+###TimeoutSec=0
 
 # Output needs to appear in instance console output
-StandardOutput=journal+console
+###StandardOutput=journal+console
 
-[Install]
-WantedBy=multi-user.target
-EOF
-systemctl enable nova-agent
+###[Install]
+###WantedBy=multi-user.target
+###EOF
 
-chmod +x /etc/rc.d/rc.local
-systemctl enable rc-local.service
-
-yum -y install kernel
-# make double sure grub/extlinux are happy
-# remove any grub entries and
-# manually create extlinux file
-dd if=/usr/share/syslinux/mbr.bin of=/dev/xvda bs=512 count=1
-extlinux --install /boot
-rm -rf /boot/grub*
-version=$(rpm -q kernel --queryformat='%{VERSION}-%{RELEASE}.%{ARCH}\n' | tail -n 1)
-cat > /boot/extlinux.conf <<EOF
-TIMEOUT 1
-default linux
-
-LABEL linux
-      KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/xvda1 console=ttyS0,115200n8 console=hvc0 console=tty0
-      initrd /boot/initramfs-$version.img
-EOF
-rm -f /etc/extlinux.conf
-ln -s /boot/extlinux.conf /etc/extlinux.conf
-
-# nova-agent and krb5-libs conflict workaround
-#cat > /etc/dnf/protected.d/dnf.conf <<'EOF'
-#dnf
-#krb5-libs
-#nova-agent
-#EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Fedora_23_PVHVM
-rm -rf /root/tmp
 
 # clean up
 passwd -d root
 yum clean all
-truncate -c -s 0 /var/log/yum.log
-echo "" > /etc/machine-id
-rm -f /root/anaconda-ks.cfg
+truncate -c -s 0 /etc/machine-id
+rm -rf /tmp/tools-install
+rm -f /installer.sh
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
 touch /etc/resolv.conf
@@ -301,9 +216,9 @@ rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
-rm -rf /tmp/tmp
-for k in $(find /var/log -type f); do echo > $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
+###rm -rf /var/log/anaconda/
+###find /var/log -type f ! -iname README -exec truncate -s 0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 
 %end
