--- a/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
@@ -66,17 +66,6 @@ xz-libs
 
 %post --erroronfail
 
-# setup systemd to boot to the right runlevel
-echo -n "Setting default runlevel to multiuser text mode"
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-echo .
-
-# If you want to remove rsyslog and just use journald, remove this!
-echo -n "Disabling persistent journal"
-rmdir /var/log/journal/ 
-echo . 
-
 # this is installed by default but we don't need it in virt
 echo "Removing linux-firmware package."
 yum -C -y remove linux-firmware
@@ -118,13 +107,6 @@ cat > /etc/sysconfig/ip6tables <<'EOF'
 COMMIT
 EOF
 
-echo -n "Getty fixes"
-# although we want console output going to the serial console, we don't
-# actually have the opportunity to login there. FIX.
-# we don't really need to auto-spawn _any_ gettys.
-sed -i '/^#NAutoVTs=.*/ a\
-NAutoVTs=0' /etc/systemd/logind.conf
-
 echo -n "Network fixes"
 # initscripts don't like this file to be missing.
 cat > /etc/sysconfig/network << EOF
@@ -152,12 +134,6 @@ cat > /etc/hosts << EOF
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
 
 EOF
-
-# Because memory is scarce resource in most cloud/virt environments,
-# and because this impedes forensics, we are differing from the Fedora
-# default of having /tmp on tmpfs.
-echo "Disabling tmpfs for /tmp."
-systemctl mask tmp.mount
 
 # tmp tmp
 mkdir /tmp/tmp
@@ -206,14 +182,6 @@ sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/6/x86_64/%g' /etc/
 sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/epel.repo
 sed -i '/baseurl/s/# *//' /etc/yum.repos.d/epel.repo
 
-cat >> /etc/yum.repos.d/rhel-source.repo <<'EOF'
-[rhel-source]
-name=Red Hat Enterprise Linux $releasever - $basearch - Source
-baseurl=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
-enabled=1
-gpgcheck=0
-EOF
-
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 datasource_list: [ ConfigDrive, None ]
@@ -248,131 +216,8 @@ cloud_config_modules:
  - byobu
 EOF
 
-# cloud-init / nova-agent sad panda hack
-cat > /etc/init.d/cloud-init-local <<'EOF'
-#!/bin/sh
-
-#
-#    Copyright (C) 2012 Yahoo! Inc.
-#
-#    Author: Joshua Harlow <harlowja@yahoo-inc.com>
-#
-#    This program is free software: you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License version 3, as
-#    published by the Free Software Foundation.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License
-#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-
-# See: http://wiki.debian.org/LSBInitScripts
-# See: http://tiny.cc/czvbgw
-# See: http://www.novell.com/coolsolutions/feature/15380.html
-# Also based on dhcpd in RHEL (for comparison)
-
-### BEGIN INIT INFO
-# Provides:          cloud-init-local
-# Required-Start:    $local_fs $remote_fs
-# Should-Start:      $time
-# Required-Stop:
-# Should-Stop:
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: The initial cloud-init job (local fs contingent)
-# Description:       Start cloud-init and runs the initialization phases
-#	and any associated initial modules as desired.
-### END INIT INFO
-
-# Return values acc. to LSB for all commands but status:
-# 0	  - success
-# 1       - generic or unspecified error
-# 2       - invalid or excess argument(s)
-# 3       - unimplemented feature (e.g. "reload")
-# 4       - user had insufficient privileges
-# 5       - program is not installed
-# 6       - program is not configured
-# 7       - program is not running
-# 8--199  - reserved (8--99 LSB, 100--149 distrib, 150--199 appl)
-# 
-# Note that starting an already running service, stopping
-# or restarting a not-running service as well as the restart
-# with force-reload (in case signaling is not supported) are
-# considered a success.
-
-sleep 90
-RETVAL=0
-
-prog="cloud-init"
-cloud_init="/usr/bin/cloud-init"
-conf="/etc/cloud/cloud.cfg"
-
-# If there exist sysconfig/default variable override files use it...
-[ -f /etc/sysconfig/cloud-init ] && . /etc/sysconfig/cloud-init
-[ -f /etc/default/cloud-init ] && . /etc/default/cloud-init
-
-start() {
-    [ -x $cloud_init ] || return 5
-    [ -f $conf ] || return 6
-
-    echo -n $"Starting $prog: "
-    $cloud_init $CLOUDINITARGS init --local
-    RETVAL=$?
-    return $RETVAL
-}
-
-stop() {
-    echo -n $"Shutting down $prog: "
-    # No-op
-    RETVAL=7
-    return $RETVAL
-}
-
-case "$1" in
-    start)
-        start
-        RETVAL=$?
-	;;
-    stop)
-        stop
-        RETVAL=$?
-	;;
-    restart|try-restart|condrestart)
-        ## Stop the service and regardless of whether it was
-        ## running or not, start it again.
-        # 
-        ## Note: try-restart is now part of LSB (as of 1.9).
-        ## RH has a similar command named condrestart.
-        start
-        RETVAL=$?
-	;;
-    reload|force-reload)
-        # It does not support reload
-        RETVAL=3
-	;;
-    status)
-        echo -n $"Checking for service $prog:"
-        # Return value is slightly different for the status command:
-        # 0 - service up and running
-        # 1 - service dead, but /var/run/  pid  file exists
-        # 2 - service dead, but /var/lock/ lock file exists
-        # 3 - service not running (unused)
-        # 4 - service status unknown :-(
-        # 5--199 reserved (5--99 LSB, 100--149 distro, 150--199 appl.)
-        RETVAL=3
-	;;
-    *)
-        echo "Usage: $0 {start|stop|status|try-restart|condrestart|restart|force-reload|reload}"
-        RETVAL=3
-	;;
-esac
-
-exit $RETVAL
-EOF
+# nova-agent sad panda hack -- add a delay to nova-agent startup to allow it to setup the network
+sed -i '/^  ${nova_agent}/a \ \ sleep 20' /etc/init.d/nova-agent
 
 # update all
 yum -y update
@@ -410,8 +255,8 @@ rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
-for k in $(find /var/log -type f); do truncate -s 0 $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s 0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname '.*' -delete
 
 %end
