--- a/CentOS_6_PVHVM.cfg
+++ b/CentOS_6_PVHVM.cfg
@@ -150,8 +150,9 @@ wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcd
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
-wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-rpm -Uhv nova-agent*
+#wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
+wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.el6.x86_64.rpm -O nova-agent.rpm
+rpm -Uhv nova-agent.rpm
 
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
@@ -223,7 +224,7 @@ cloud_config_modules:
 EOF
 
 # nova-agent sad panda hack -- add a delay to nova-agent startup to allow it to setup the network
-sed -i '/^  ${nova_agent}/a \ \ sleep 20' /etc/init.d/nova-agent
+sed -i '/touch $lockfile/a \ \ \ \ sleep 12' /etc/init.d/nova-agent
 
 # force grub to use generic disk labels and all boot options, bootloader above does not do this
 # these options are required as of 6.6 now or PVHVM instance kernels will crash
